# tmux-top

./: .gitignore  .packit.yaml  CMakeLists.txt  Makefile  README.md  display.c  display.h  go.mod  go.sum  io.c  load.c  main.c  mem.c  net.c  tmux-top.spec
cli/: cli.go
cmd/tmux-top/: cli.go
conf/: conf.go  conf_test.go  default_json.go  manager.go
disk/: disk.go  disk_test.go
display/: display.go  display_test.go
humanize/: humanize.go  humanize_test.go
io/: io.go  io_test.go
journal/: journal.go  journal_test.go
load/: load.go  load_test.go
mem/: mem.go
net/: net.go  net_test.go
sens/: sens.go  sens_test.go
src/cliif/: cliif.go  tmux_display.go
src/conf/: conf.go
src/load/: load.go
src/tmux-top/cli/: cli.go
src/tmux-top/conf/: conf.go
src/tmux-top/display/: display.go
src/tmux-top/net/: net.go
